# math-parser-rest-api

./: CMakeLists.txt  Dockerfile  README.md  conan-profile.armv8  conanfile.txt
.github/workflows/: build-test.yml
app/: App.cpp  AppComponent.hpp
lib/controller/: CalcController.cpp  CalcController.hpp  RootController.hpp
src/: App.cpp
src/controller/: CalcController.hpp  RootController.hpp
src/dto/: DTOs.hpp  DtoExpressionConversion.cpp  DtoExpressionConversion.hpp
test/: CalcControllerTest.cpp  CalcControllerTest.hpp  tests.cpp
test/app/: CalcApiTestClient.hpp
